--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,7 +1,6 @@
 .home {
 
 	.site-wrapper {
-		display: grid;
 		position: relative;
 		z-index: 1;
 	}
